src/objects/ap_pdb_trip_cmx__x.object
<CustomObject>
    <description>caesars$ap_pdb_trip_cmx</description>
    <externalDataSource>CustomApexHerokuConnector</externalDataSource>
    <externalName>caesars$ap_pdb_trip_cmx</externalName>
    <fields>
        <fullName>ap_pdb_trip_hdr_fk__c</fullName>
        <description>ap_pdb_trip_hdr_fk</description>
        <externalDeveloperName>ap_pdb_trip_hdr_fk</externalDeveloperName>
        <label>ap_pdb_trip_hdr_fk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c_prop_market_cd__c</fullName>
        <description>c_prop_market_cd</description>
        <externalDeveloperName>c_prop_market_cd</externalDeveloperName>
        <label>c_prop_market_cd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c_quality_cd__c</fullName>
        <description>c_quality_cd</description>
        <externalDeveloperName>c_quality_cd</externalDeveloperName>
        <label>c_quality_cd</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contact_fk__c</fullName>
        <description>contact_fk</description>
        <externalDeveloperName>contact_fk</externalDeveloperName>
        <label>contact_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_end_dt__c</fullName>
        <description>d_end_dt</description>
        <externalDeveloperName>d_end_dt</externalDeveloperName>
        <label>d_end_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_start_dt__c</fullName>
        <description>d_start_dt</description>
        <externalDeveloperName>d_start_dt</externalDeveloperName>
        <label>d_start_dt</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>d_timestamp__c</fullName>
        <description>d_timestamp</description>
        <externalDeveloperName>d_timestamp</externalDeveloperName>
        <label>d_timestamp</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_cash_play_game__c</fullName>
        <description>f_cash_play_game</description>
        <externalDeveloperName>f_cash_play_game</externalDeveloperName>
        <label>f_cash_play_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_play_oth__c</fullName>
        <description>f_cash_play_oth</description>
        <externalDeveloperName>f_cash_play_oth</externalDeveloperName>
        <label>f_cash_play_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_cash_play_slot__c</fullName>
        <description>f_cash_play_slot</description>
        <externalDeveloperName>f_cash_play_slot</externalDeveloperName>
        <label>f_cash_play_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_food_comp_amt__c</fullName>
        <description>f_food_comp_amt</description>
        <externalDeveloperName>f_food_comp_amt</externalDeveloperName>
        <label>f_food_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_marker_play_game__c</fullName>
        <description>f_marker_play_game</description>
        <externalDeveloperName>f_marker_play_game</externalDeveloperName>
        <label>f_marker_play_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_marker_play_oth__c</fullName>
        <description>f_marker_play_oth</description>
        <externalDeveloperName>f_marker_play_oth</externalDeveloperName>
        <label>f_marker_play_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_marker_play_slot__c</fullName>
        <description>f_marker_play_slot</description>
        <externalDeveloperName>f_marker_play_slot</externalDeveloperName>
        <label>f_marker_play_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_other_comp_amt__c</fullName>
        <description>f_other_comp_amt</description>
        <externalDeveloperName>f_other_comp_amt</externalDeveloperName>
        <label>f_other_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_room_comp_amt__c</fullName>
        <description>f_room_comp_amt</description>
        <externalDeveloperName>f_room_comp_amt</externalDeveloperName>
        <label>f_room_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>f_total_comp_amt__c</fullName>
        <description>f_total_comp_amt</description>
        <externalDeveloperName>f_total_comp_amt</externalDeveloperName>
        <label>f_total_comp_amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_ap_pdb_trip_id__c</fullName>
        <description>i_ap_pdb_trip_id</description>
        <externalDeveloperName>i_ap_pdb_trip_id</externalDeveloperName>
        <label>i_ap_pdb_trip_id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_dmid__c</fullName>
        <description>i_dmid</description>
        <externalDeveloperName>i_dmid</externalDeveloperName>
        <label>i_dmid</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i_len_of_play_game__c</fullName>
        <description>i_len_of_play_game</description>
        <externalDeveloperName>i_len_of_play_game</externalDeveloperName>
        <label>i_len_of_play_game</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_len_of_play_oth__c</fullName>
        <description>i_len_of_play_oth</description>
        <externalDeveloperName>i_len_of_play_oth</externalDeveloperName>
        <label>i_len_of_play_oth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_len_of_play_slot__c</fullName>
        <description>i_len_of_play_slot</description>
        <externalDeveloperName>i_len_of_play_slot</externalDeveloperName>
        <label>i_len_of_play_slot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>i_prop_market_type_id__c</fullName>
        <description>i_prop_market_type_id</description>
        <externalDeveloperName>i_prop_market_type_id</externalDeveloperName>
        <label>i_prop_market_type_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>market_fk__c</fullName>
        <description>market_fk</description>
        <externalDeveloperName>market_fk</externalDeveloperName>
        <label>market_fk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Ap pdb trip cmx</label>
    <pluralLabel>Ap pdb trip cmxs</pluralLabel>
</CustomObject>